--- a/main.css
+++ b/main.css
@@ -51,11 +51,10 @@ body {
   float: top;
   height: 45vh;
   min-height: 45vh;
-  max-width: 17rem;
-  min-width: 17rem;
+  max-height: 90vh;
   border: none;
   outline: none;
-  /* resize: none; */
+  resize: vertical;
   overflow-y: hidden;
   font-size: large;
   font-family: sans-serif;
