--- a/main.css
+++ b/main.css
@@ -6,6 +6,17 @@ body {
   background-image: linear-gradient(rgb(132, 0, 255), rgb(165, 0, 155));
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(to top, rgb(0, 81, 255), rgb(0, 247, 255));
+  border-radius: 0.5rem;
+}
+::-webkit-scrollbar-corner {
+  border-radius: 0.5rem;
+}
+
 @media screen and (max-width: 1280px) {
   #app {
     display: flex;
@@ -16,10 +27,9 @@ body {
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 920px) {
   #app {
     display: flex;
-    /* align-items: center; */
     justify-content: center;
   }
 }
@@ -51,11 +61,10 @@ body {
   float: top;
   height: 45vh;
   min-height: 45vh;
-  max-height: 90vh;
+  max-height: 70vh;
   border: none;
   outline: none;
   resize: vertical;
-  overflow-y: hidden;
   font-size: large;
   font-family: sans-serif;
   box-sizing: border-box;
